--- a/Source/GitTime.Web/Views/Login/Index.cshtml
+++ b/Source/GitTime.Web/Views/Login/Index.cshtml
@@ -24,7 +24,8 @@
                 @Html.PasswordFor(x => x.Password, new { placeholder = "Password", @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.CheckBoxFor(x => x.RememberMe, new { @class = "i-checks" }) Remember me
+                @Html.CheckBoxFor(x => x.RememberMe, new { @class = "i-checks" })
+                @Html.LabelFor(x => x.RememberMe, "Remember me")
             </div>
 
             <div class="form-group">
