--- a/Source/GitTime.Web/Views/Timecard/Find.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@using GitTime.Web.Models.View.Timecard
+﻿@using GitTime.Web.Models.View
 
 @model FindModel
 
@@ -8,7 +8,7 @@
 
 @section Scripts
 {
-    <script>
+<script>
     $(function () {
         $("input[type='date']").datepicker({
             changeMonth: true,
@@ -21,10 +21,36 @@
     });
 
     var _editor = {
-        showEditor: function (id) {
+        search: function(isClear) {
+            var form = $("#SearchCriteria form");
+
+            form.validate();
+
+            if (!form.valid())
+                return;
+
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("Search", "Timecard")',
+                data: form.serialize() + "&SearchCriteria.Clear=" + (isClear ? "true": "false") + _editor._getPostData(null),
+                success: function (data) {
+                    var newDoc = document.open("text/html", "replace");
+                    newDoc.write(data);
+                    newDoc.close();
+                },
+                error: function (xhr) {
+                    var newDoc = document.open("text/html", "replace");
+                    newDoc.write(xhr.responseText);
+                    newDoc.close();
+                },
+            });
+        },
+
+        showEditor: function (key) {
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("Edit", "Timecard")',
+                data: _editor._getJsonData(key),
                 success: function (data) {
                     _editor._init(data);
                 },
@@ -40,6 +66,7 @@
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("Create", "Timecard")',
+                data: _editor._getJsonData(null),
                 success: function (data) {
                     _editor._init(data);
                 },
@@ -64,15 +91,42 @@
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("Save", "Timecard")',
-                data: form.serialize(),
+                data: form.serialize() + _editor._getPostData(null),
                 success: function (data) {
                     $('#SearchResultsPlaceholder').html(data);
-                    $("#Editor").modal("hide");
+
+                    $("body").removeClass("modal-open");
                 },
                 error: function (xhr) {
-                    _editor._init(xhr.responseText);
+                    if (xhr.responseText.indexOf("<!DOCTYPE") == 0) {
+                        var newDoc = document.open("text/html", "replace");
+                        newDoc.write(xhr.responseText);
+                        newDoc.close();
+                    }
+                    else {
+                        _editor._init(xhr.responseText);
 
-                    $("#Editor form .alert-danger").show();
+                        $("#Editor form .alert-danger").show();
+                    }
+                },
+            });
+        },
+
+        delete: function (key) {
+            if (!confirm("Are you sure you want to delete this timecard?"))
+                return;
+
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("Delete", "Timecard")',
+                data: _editor._getJsonData(key),
+                success: function (data) {
+                    $('#SearchResultsPlaceholder').html(data);
+                },
+                error: function (xhr) {
+                    var newDoc = document.open("text/html", "replace");
+                    newDoc.write(xhr.responseText);
+                    newDoc.close();
                 },
             });
         },
@@ -89,7 +143,20 @@
 
             $("#Editor").modal("show");
         },
-    }
+
+        _getJsonData: function (key) {
+            return {
+                "Key": key,
+                "SearchResults.PageIndex": $("#SearchResults_PageIndex").val(),
+                "SearchResults.Filter": $("#SearchResults_Filter").val()
+            };
+        },
+
+        _getPostData: function () {
+            return "&SearchResults.PageIndex=" + encodeURIComponent($("#SearchResults_PageIndex").val()) + "&SearchResults.Filter=" + encodeURIComponent($("#SearchResults_Filter").val());
+        },
+    };
+
 </script>
 }
 
@@ -99,24 +166,24 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Search <span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li>
-                <div class="search-criteria">
+                <div  id="SearchCriteria" class="search-criteria">
                     @using (Html.BeginForm(null, null, null, FormMethod.Post, new { role = "form" }))
                     {
                         <div class="form-group">
-                            @Html.TextBoxFor(x => x.ProjectName, new { placeholder = "Project", @class = "form-control input-sm" })
+                            @Html.TextBoxFor(x => x.SearchCriteria.ProjectName, new { placeholder = "Project", @class = "form-control input-sm" })
                         </div>
                         <div class="form-group">
-                            @Html.TextBoxFor(x => x.PersonName, new { placeholder = "Person", @class = "form-control input-sm" })
+                            @Html.TextBoxFor(x => x.SearchCriteria.PersonName, new { placeholder = "Person", @class = "form-control input-sm" })
                         </div>
                         <div class="form-group">
-                            @Html.TextBoxFor(x => x.DateEntryFrom, new { type = "date", placeholder = "From", @class = "form-control input-sm date-range" })
+                            @Html.InputDateWithoutValidationFor(x => x.SearchCriteria.EntryDateFrom, new { type = "date", placeholder = "From", @class = "form-control input-sm date-range" })
                             <span class="date-range-to">to</span>
-                            @Html.TextBoxFor(x => x.DateEntryThru, new { type = "date", placeholder = "Thru", @class = "form-control input-sm date-range" })
+                            @Html.InputDateWithoutValidationFor(x => x.SearchCriteria.EntryDateThru, new { type = "date", placeholder = "Thru", @class = "form-control input-sm date-range" })
                         </div>
 
                         <div class="form-group buttons">
-                            <button name="action" value="search" type="submit" class="btn btn-primary btn-sm">Search</button>
-                            <button name="action" value="clear" type="submit" class="btn btn-default btn-sm">Clear</button>
+                            <button name="action" value="search" type="button" class="btn btn-primary btn-sm" onclick="_editor.search(false);">Search</button>
+                            <button name="action" value="clear" type="button" class="btn btn-default btn-sm" onclick="_editor.search(true); $(this).dropdown('toggle');">Clear</button>
                         </div>
                     }
                 </div>
