--- a/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
@@ -1,15 +1,29 @@
 ﻿@using GitTime.Web.Models.Database
+@using GitTime.Web.Models.View
+
+@model FindModel
 
 @{
     var _dataSource = (ICollection<TimecardFinderRow>)ViewBag.DataSource;
-    var _isAdded = (bool?)ViewBag.IsAdded ?? false;
+    var _operation = (string)ViewBag.Operation;
 }
 
-@if (_isAdded)
+@if (!string.IsNullOrEmpty(_operation))
 {
     <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        New timecard successfully created.
+        @switch(_operation)
+        {
+            case "Added":
+                @("New timecard successfully created.")
+                break;
+            case "Edited":
+                @("Timecard successfully updated.")
+                break;
+            case "Deleted":
+                @("Timecard successfully deleted.")
+                break;
+        }
     </div>
 }
 
@@ -21,29 +35,41 @@
     <div id="EditorPlaceholder"></div>
 </p>
 
+@Html.HiddenFor(x => x.SearchResults.PageIndex)
+@Html.HiddenFor(x => x.SearchResults.Filter)
+
 @if (_dataSource.Count > 0)
 {
     <table class="table table-striped">
         <thead>
             <tr>
+                <th></th>
                 <th>Date</th>
                 <th>Person</th>
                 <th>Repo</th>
                 <th>Company</th>
                 <th>Description</th>
-                <th>Hours</th>
+                <th class="number">Hours</th>
             </tr>
         </thead>
         <tbody>
             @foreach (TimecardFinderRow row in _dataSource)
             {
                 <tr>
-                    <td>@string.Format("{0:MMM d, yyyy}", row.EntryDate)</td>
+                    <td class="commands">
+                        <a href="javascript:_editor.showEditor(@row.TimecardID);" title="Edit">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a href="javascript:_editor.delete(@row.TimecardID);" title="Delete">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </a>
+                    </td>
+                    <td class="date">@string.Format("{0:MMM d, yyyy}", row.EntryDate)</td>
                     <td>@row.PersonName</td>
                     <td>@row.Repository</td>
                     <td>@row.CompanyName</td>
                     <td>@row.IssueDescription</td>
-                    <td>@string.Format("{0:n2}", row.Hours)</td>
+                    <td class="number">@string.Format("{0:n2}", row.Hours)</td>
                 </tr>
             }
         </tbody>
