--- a/Source/GitTime.Web/Views/Timecard/Find.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/Find.cshtml
@@ -170,10 +170,10 @@
                     @using (Html.BeginForm(null, null, null, FormMethod.Post, new { role = "form" }))
                     {
                         <div class="form-group">
-                            @Html.TextBoxFor(x => x.SearchCriteria.ProjectName, new { placeholder = "Project", @class = "form-control input-sm" })
+                            @Html.ProjectSelectorFor(x => x.SearchCriteria.ProjectID, new { @class = "form-control input-sm" }, false)
                         </div>
                         <div class="form-group">
-                            @Html.TextBoxFor(x => x.SearchCriteria.PersonName, new { placeholder = "Person", @class = "form-control input-sm" })
+                            @Html.PersonSelectorFor(x => x.SearchCriteria.PersonContactID, new { @class = "form-control input-sm" }, false)
                         </div>
                         <div class="form-group">
                             @Html.InputDateWithoutValidationFor(x => x.SearchCriteria.EntryDateFrom, new { type = "date", placeholder = "From", @class = "form-control input-sm date-range" })
