--- a/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
@@ -4,8 +4,12 @@
 @model FindModel
 
 @{
-    var _dataSource = (ICollection<TimecardFinderRow>)ViewBag.DataSource;
     var _operation = (string)ViewBag.Operation;
+
+    var _dataSource = (ICollection<TimecardFinderRow>)ViewBag.DataSource;
+    var _pageCount = (int?)ViewBag.PageCount ?? 0;
+    var _visiblePageCount = (int?)ViewBag.VisiblePageCount ?? 0;
+    var _startPage = _visiblePageCount * (Model.SearchResults.PageIndex / _visiblePageCount);
 }
 
 @if (!string.IsNullOrEmpty(_operation))
@@ -74,6 +78,62 @@
             }
         </tbody>
     </table>
+    
+    if (_pageCount > 1)
+    {
+        <nav>
+            <ul class="pagination">
+                @if (Model.SearchResults.PageIndex == 0)
+                {
+                    <li class="disabled">
+                        <a href="#" aria-label="Previous" title="Previous" onclick="return false;">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a href="#" aria-label="Previous" title="Previous" onclick="_editor.changePage(@(Model.SearchResults.PageIndex - 1)); return false;">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                }
+
+                @if (_startPage > 0)
+                {
+                    <li><a href="#" title="Previous Pages" onclick="_editor.changePage(@(_startPage - 1)); return false;">...</a></li>
+                }
+                
+                @for (int i = _startPage; i < _pageCount && i < _startPage + _visiblePageCount; i++)
+                {
+                    <li class="@(i == Model.SearchResults.PageIndex ? "active" : "")"><a href="#" onclick="_editor.changePage(@i); return false;">@(i + 1)</a></li>
+                }
+
+                @if (_startPage + _visiblePageCount < _pageCount)
+                {
+                    <li><a href="#" title="Next Pages" onclick="_editor.changePage(@(_startPage + _visiblePageCount)); return false;">...</a></li>
+                }
+
+                @if (Model.SearchResults.PageIndex == _pageCount - 1)
+                {
+                    <li class="disabled">
+                        <a href="#" aria-label="Next" title="Next" onclick="return false;">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a href="#" aria-label="Next" title="Next" onclick="_editor.changePage(@(Model.SearchResults.PageIndex + 1)); return false;">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    }
 }
 else
 {
