--- a/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
@@ -7,6 +7,12 @@
     var _operation = (string)ViewBag.Operation;
 
     var _dataSource = (ICollection<TimecardFinderRow>)ViewBag.DataSource;
+    var _sumHours = (decimal?)ViewBag.SumHours ?? 0;
+
+    var _startRow = (int?)ViewBag.StartRow ?? 0;
+    var _endRow = (int?)ViewBag.EndRow ?? 0;
+    var _rowCount = (int?)ViewBag.RowCount ?? 0;
+        
     var _pageCount = (int?)ViewBag.PageCount ?? 0;
     var _visiblePageCount = (int?)ViewBag.VisiblePageCount ?? 0;
     var _startPage = _visiblePageCount * (Model.SearchResults.PageIndex / _visiblePageCount);
@@ -16,16 +22,16 @@
 {
     <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        @switch(_operation)
+        @switch (_operation)
         {
             case "Added":
                 @("New timecard successfully created.")
                 break;
             case "Edited":
-                @("Timecard successfully updated.")
+            @("Timecard successfully updated.")
                 break;
             case "Deleted":
-                @("Timecard successfully deleted.")
+            @("Timecard successfully deleted.")
                 break;
         }
     </div>
@@ -76,64 +82,76 @@
                     <td class="number">@string.Format("{0:n2}", row.Hours)</td>
                 </tr>
             }
+
+            <tr>
+                <td colspan="7" class="number summary">@string.Format("{0:n2}", _sumHours)</td>
+            </tr>
         </tbody>
     </table>
-    
-    if (_pageCount > 1)
-    {
-        <nav>
-            <ul class="pagination">
-                @if (Model.SearchResults.PageIndex == 0)
-                {
-                    <li class="disabled">
-                        <a href="#" aria-label="Previous" title="Previous" onclick="return false;">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                }
-                else
-                {
-                    <li>
-                        <a href="#" aria-label="Previous" title="Previous" onclick="_editor.changePage(@(Model.SearchResults.PageIndex - 1)); return false;">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                }
 
-                @if (_startPage > 0)
-                {
-                    <li><a href="#" title="Previous Pages" onclick="_editor.changePage(@(_startPage - 1)); return false;">...</a></li>
-                }
-                
-                @for (int i = _startPage; i < _pageCount && i < _startPage + _visiblePageCount; i++)
-                {
-                    <li class="@(i == Model.SearchResults.PageIndex ? "active" : "")"><a href="#" onclick="_editor.changePage(@i); return false;">@(i + 1)</a></li>
-                }
+    <div class="row">
+        <div class="col-md-6">
 
-                @if (_startPage + _visiblePageCount < _pageCount)
-                {
-                    <li><a href="#" title="Next Pages" onclick="_editor.changePage(@(_startPage + _visiblePageCount)); return false;">...</a></li>
-                }
+            @if (_pageCount > 1)
+            {
+                <nav>
+                    <ul class="pagination">
+                        @if (Model.SearchResults.PageIndex == 0)
+                        {
+                            <li class="disabled">
+                                <a href="#" aria-label="Previous" title="Previous" onclick="return false;">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="#" aria-label="Previous" title="Previous" onclick="_editor.changePage(@(Model.SearchResults.PageIndex - 1)); return false;">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                        }
 
-                @if (Model.SearchResults.PageIndex == _pageCount - 1)
-                {
-                    <li class="disabled">
-                        <a href="#" aria-label="Next" title="Next" onclick="return false;">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                }
-                else
-                {
-                    <li>
-                        <a href="#" aria-label="Next" title="Next" onclick="_editor.changePage(@(Model.SearchResults.PageIndex + 1)); return false;">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                }
-            </ul>
-        </nav>
-    }
+                        @if (_startPage > 0)
+                        {
+                            <li><a href="#" title="Previous Pages" onclick="_editor.changePage(@(_startPage - 1)); return false;">...</a></li>
+                        }
+
+                        @for (int i = _startPage; i < _pageCount && i < _startPage + _visiblePageCount; i++)
+                        {
+                            <li class="@(i == Model.SearchResults.PageIndex ? "active" : "")"><a href="#" onclick="_editor.changePage(@i); return false;">@(i + 1)</a></li>
+                        }
+
+                        @if (_startPage + _visiblePageCount < _pageCount)
+                        {
+                            <li><a href="#" title="Next Pages" onclick="_editor.changePage(@(_startPage + _visiblePageCount)); return false;">...</a></li>
+                        }
+
+                        @if (Model.SearchResults.PageIndex == _pageCount - 1)
+                        {
+                            <li class="disabled">
+                                <a href="#" aria-label="Next" title="Next" onclick="return false;">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="#" aria-label="Next" title="Next" onclick="_editor.changePage(@(Model.SearchResults.PageIndex + 1)); return false;">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+            }
+        </div>
+        <div class="col-md-6 page-number">
+            Timecards @_startRow - @_endRow of @_rowCount
+        </div>
+    </div>
 }
 else
 {
