Finder is refactored

--- a/Source/GitTime.Web/Content/Site.css
+++ b/Source/GitTime.Web/Content/Site.css
@@ -88,4 +88,20 @@ div.ui-datepicker { font-size:12px; }
 
 /* Validation */
 
-.input-validation-error { border-color:##eed3d7; background-color:#f2dede; }
+.input-validation-error { border-color:#eed3d7; background-color:#f2dede; }
+
+/* Loading panel */
+
+.loading-modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba( 255, 255, 255, 0.3 ) url('/images/loading3.gif') 50% 50%  no-repeat;
+}
+
+body.loading { overflow: hidden; }
+body.loading .loading-modal { display: block; }
