--- a/Source/GitTime.Web/Views/Timecard/Edit.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@using GitTime.Web.Models.View
+﻿@using GitTime.Web.Models.View.Timecard
 
 @model FindModel
 
@@ -90,7 +90,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="_editor.save();">Save</button>
+                <button type="button" class="btn btn-primary" onclick="_finder.save();">Save</button>
             </div>
         </div>
     </div>
