--- a/Source/GitTime.Web/Views/Timecard/Find.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@using GitTime.Web.Models.View
+﻿@using GitTime.Web.Models.View.Timecard
 
 @model FindModel
 
@@ -8,177 +8,7 @@
 
 @section Scripts
 {
-<script>
-    $(function () {
-        $("input[type='date']").datepicker({
-            changeMonth: true,
-            changeYear: true
-        });
-
-        $('#ui-datepicker-div').click(function (e) {
-            e.stopPropagation();
-        });
-    });
-
-    var _editor = {
-        search: function(isClear) {
-            var form = $("#SearchCriteria form");
-
-            form.validate();
-
-            if (!form.valid())
-                return;
-
-            $.ajax({
-                type: "POST",
-                url: '@Url.Action("Search", "Timecard")',
-                data: form.serialize() + "&SearchCriteria.Clear=" + (isClear ? "true": "false") + _editor._getPostData(null),
-                success: function (data) {
-                    var newDoc = document.open("text/html", "replace");
-                    newDoc.write(data);
-                    newDoc.close();
-                },
-                error: function (xhr) {
-                    var newDoc = document.open("text/html", "replace");
-                    newDoc.write(xhr.responseText);
-                    newDoc.close();
-                },
-            });
-        },
-
-        changePage: function (pageIndex) {
-            if ($("#SearchResults_PageIndex").val() == pageIndex)
-                return;
-
-            $("#SearchResults_PageIndex").val(pageIndex);
-
-            $.ajax({
-                type: "POST",
-                url: '@Url.Action("ChangePage", "Timecard")',
-                data: _editor._getJsonData(null),
-                success: function (data) {
-                    $('#SearchResultsPlaceholder').html(data);
-                },
-                error: function (xhr) {
-                    var newDoc = document.open("text/html", "replace");
-                    newDoc.write(xhr.responseText);
-                    newDoc.close();
-                },
-            });
-        },
-
-        showEditor: function (key) {
-            $.ajax({
-                type: "POST",
-                url: '@Url.Action("Edit", "Timecard")',
-                data: _editor._getJsonData(key),
-                success: function (data) {
-                    _editor._init(data);
-                },
-                error: function (xhr) {
-                    var newDoc = document.open("text/html", "replace");
-                    newDoc.write(xhr.responseText);
-                    newDoc.close();
-                },
-            });
-        },
-
-        showCreator: function () {
-            $.ajax({
-                type: "POST",
-                url: '@Url.Action("Create", "Timecard")',
-                data: _editor._getJsonData(null),
-                success: function (data) {
-                    _editor._init(data);
-                },
-                error: function (xhr) {
-                    var newDoc = document.open("text/html", "replace");
-                    newDoc.write(xhr.responseText);
-                    newDoc.close();
-                },
-            });
-        },
-
-        save: function () {
-            var form = $("#Editor form");
-
-            form.validate();
-
-            if (!form.valid()) {
-                form.children(".alert-danger").show();
-                return;
-            }
-
-            $.ajax({
-                type: "POST",
-                url: '@Url.Action("Save", "Timecard")',
-                data: form.serialize() + _editor._getPostData(null),
-                success: function (data) {
-                    $('#SearchResultsPlaceholder').html(data);
-
-                    $("body").removeClass("modal-open");
-                },
-                error: function (xhr) {
-                    if (xhr.responseText.indexOf("<!DOCTYPE") == 0) {
-                        var newDoc = document.open("text/html", "replace");
-                        newDoc.write(xhr.responseText);
-                        newDoc.close();
-                    }
-                    else {
-                        _editor._init(xhr.responseText);
-
-                        $("#Editor form .alert-danger").show();
-                    }
-                },
-            });
-        },
-
-        delete: function (key) {
-            if (!confirm("Are you sure you want to delete this timecard?"))
-                return;
-
-            $.ajax({
-                type: "POST",
-                url: '@Url.Action("Delete", "Timecard")',
-                data: _editor._getJsonData(key),
-                success: function (data) {
-                    $('#SearchResultsPlaceholder').html(data);
-                },
-                error: function (xhr) {
-                    var newDoc = document.open("text/html", "replace");
-                    newDoc.write(xhr.responseText);
-                    newDoc.close();
-                },
-            });
-        },
-
-        _init: function (data) {
-            $('#EditorPlaceholder').html(data);
-
-            $("#Editor input[type='date']").datepicker({
-                changeMonth: true,
-                changeYear: true
-            });
-
-            $.validator.unobtrusive.parse("#Editor form");
-
-            $("#Editor").modal("show");
-        },
-
-        _getJsonData: function (key) {
-            return {
-                "Key": key,
-                "SearchResults.PageIndex": $("#SearchResults_PageIndex").val(),
-                "SearchResults.Filter": $("#SearchResults_Filter").val()
-            };
-        },
-
-        _getPostData: function () {
-            return "&SearchResults.PageIndex=" + encodeURIComponent($("#SearchResults_PageIndex").val()) + "&SearchResults.Filter=" + encodeURIComponent($("#SearchResults_Filter").val());
-        },
-    };
-
-</script>
+    @Html.Partial("_Find")
 }
 
 @section SearchCriteria
@@ -203,8 +33,8 @@
                         </div>
 
                         <div class="form-group buttons">
-                            <button name="action" value="search" type="button" class="btn btn-primary btn-sm" onclick="_editor.search(false);">Search</button>
-                            <button name="action" value="clear" type="button" class="btn btn-default btn-sm" onclick="_editor.search(true); $(this).dropdown('toggle');">Clear</button>
+                            <button name="action" value="search" type="button" class="btn btn-primary btn-sm" onclick="_finder.search(false);">Search</button>
+                            <button name="action" value="clear" type="button" class="btn btn-default btn-sm" onclick="_finder.search(true); $(this).dropdown('toggle');">Clear</button>
                         </div>
                     }
                 </div>
@@ -217,4 +47,7 @@
 
 <div id="SearchResultsPlaceholder">
     @Html.Partial("SearchResults")
+</div>
+
+<div class="loading-modal">
 </div>
