--- a/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/SearchResults.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GitTime.Web.Models.Database
-@using GitTime.Web.Models.View
+@using GitTime.Web.Models.View.Timecard
 
 @model FindModel
 
@@ -38,7 +38,7 @@
 }
 
 <p>
-    <button id="NewTimecardButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#Editor" onclick="_editor.showCreator();">
+    <button id="NewTimecardButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#Editor" onclick="_finder.showCreator();">
         New Timecard
     </button>
 
@@ -46,7 +46,7 @@
 </p>
 
 @Html.HiddenFor(x => x.SearchResults.PageIndex)
-@Html.HiddenFor(x => x.SearchResults.Filter)
+@Html.HiddenFor(x => x.SearchResults.SerializedFilter)
 
 @if (_dataSource.Count > 0)
 {
@@ -67,10 +67,10 @@
             {
                 <tr>
                     <td class="commands">
-                        <a href="javascript:_editor.showEditor(@row.TimecardID);" title="Edit">
+                        <a href="javascript:_finder.showEditor(@row.TimecardID);" title="Edit">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
-                        <a href="javascript:_editor.delete(@row.TimecardID);" title="Delete">
+                        <a href="javascript:_finder.deleteRecord(@row.TimecardID);" title="Delete">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                         </a>
                     </td>
@@ -107,7 +107,7 @@
                         else
                         {
                             <li>
-                                <a href="#" aria-label="Previous" title="Previous" onclick="_editor.changePage(@(Model.SearchResults.PageIndex - 1)); return false;">
+                                <a href="#" aria-label="Previous" title="Previous" onclick="_finder.changePage(@(Model.SearchResults.PageIndex - 1)); return false;">
                                     <span aria-hidden="true">&laquo;</span>
                                 </a>
                             </li>
@@ -115,17 +115,17 @@
 
                         @if (_startPage > 0)
                         {
-                            <li><a href="#" title="Previous Pages" onclick="_editor.changePage(@(_startPage - 1)); return false;">...</a></li>
+                            <li><a href="#" title="Previous Pages" onclick="_finder.changePage(@(_startPage - 1)); return false;">...</a></li>
                         }
 
                         @for (int i = _startPage; i < _pageCount && i < _startPage + _visiblePageCount; i++)
                         {
-                            <li class="@(i == Model.SearchResults.PageIndex ? "active" : "")"><a href="#" onclick="_editor.changePage(@i); return false;">@(i + 1)</a></li>
+                            <li class="@(i == Model.SearchResults.PageIndex ? "active" : "")"><a href="#" onclick="_finder.changePage(@i); return false;">@(i + 1)</a></li>
                         }
 
                         @if (_startPage + _visiblePageCount < _pageCount)
                         {
-                            <li><a href="#" title="Next Pages" onclick="_editor.changePage(@(_startPage + _visiblePageCount)); return false;">...</a></li>
+                            <li><a href="#" title="Next Pages" onclick="_finder.changePage(@(_startPage + _visiblePageCount)); return false;">...</a></li>
                         }
 
                         @if (Model.SearchResults.PageIndex == _pageCount - 1)
@@ -139,7 +139,7 @@
                         else
                         {
                             <li>
-                                <a href="#" aria-label="Next" title="Next" onclick="_editor.changePage(@(Model.SearchResults.PageIndex + 1)); return false;">
+                                <a href="#" aria-label="Next" title="Next" onclick="_finder.changePage(@(Model.SearchResults.PageIndex + 1)); return false;">
                                     <span aria-hidden="true">&raquo;</span>
                                 </a>
                             </li>
