Added Company and Person finders

--- a/Source/GitTime.Web/Views/Timecard/Edit.cshtml
+++ b/Source/GitTime.Web/Views/Timecard/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using GitTime.Web.Models.View.Timecard
 
-@model FindModel
+@model FinderModel
 
 @{
     var _errorMessage = (string)ViewBag.ErrorMessage;
