--- a/Source/GitTime.Web/Views/Shared/_AlertError.cshtml
+++ b/Source/GitTime.Web/Views/Shared/_AlertError.cshtml
@@ -2,6 +2,6 @@
 {
     <div class="alert alert-danger alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        @(ViewBag.ErrorMessage)
+        @Html.Raw(ViewBag.ErrorMessage)
     </div>
 }
