--- a/Source/GitTime.Web/Views/Shared/_Layout.cshtml
+++ b/Source/GitTime.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using GitTime.Web.Infrastructure.Web
+@using GitTime.Web.Infrastructure.GitHub
+
+@{
+    var gitHubUser = GitHubUser.GetCurrent();
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -23,9 +30,19 @@
                 <ul class="nav navbar-nav">
                     @RenderSection("SearchCriteria", required: false)
 
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">GitHub <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Issues", "Index", "GitHub")</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><p class="navbar-text">
+                        @if (gitHubUser.IsAuthenticated) { <img alt="" style="width:20px; height:20px; margin-right:2px;" src="@gitHubUser.AvatarUrl"> }
+                        @GitTimeUser.Current.FirstName @GitTimeUser.Current.LastName
+                    </p></li>
+                    <li><a href="@Url.Action("Logout", "Login")"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
             </div>
         </div>
