--- a/Source/GitTime.Web/Views/Person/Edit.cshtml
+++ b/Source/GitTime.Web/Views/Person/Edit.cshtml
@@ -1,9 +1,11 @@
-﻿@using GitTime.Web.Models.View.Person
+﻿@using GitTime.Web.Models.Database;
+@using GitTime.Web.Models.View.Person
 
 @model FinderModel
 
 @{
     var _errorMessage = (string)ViewBag.ErrorMessage;
+    List<Role> roles = ViewBag.Roles;
 }
 
 <!-- Modal -->
@@ -42,6 +44,7 @@
                                     @{ Html.ValidateFor(x => x.Edit.Email); }
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 @Html.Label("First Name", new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
@@ -49,13 +52,15 @@
                                     @{ Html.ValidateFor(x => x.Edit.FirstName); }
                                 </div>
                             </div>
+
                             <div class="form-group">
-                                @Html.Label("LastName", new { @class = "control-label col-md-2" })
+                                @Html.Label("Last Name", new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
                                     @Html.TextBoxFor(x => x.Edit.LastName, new { @class = "form-control" })
                                     @{ Html.ValidateFor(x => x.Edit.LastName); }
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 @Html.Label("Password", new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
@@ -63,6 +68,22 @@
                                     @{ Html.ValidateFor(x => x.Edit.Password); }
                                 </div>
                             </div>
+
+                            @if (roles != null)
+                            {
+                                <div class="form-group">
+                                    @Html.Label("Roles", new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @foreach (Role r in roles)
+                                        {
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" name="Edit.Roles" value="@r.ID"
+                                                              @(Model.Edit.Roles.Contains(r.ID) ? "checked='checked'" : String.Empty)> @r.Name</label>
+                                            </div>
+                                        }
+                                    </div>
+                                </div>
+                            }
                         </div>
                     </div>
                 }
