--- a/Source/GitTime.Web/Views/Shared/_Layout.cshtml
+++ b/Source/GitTime.Web/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
     <title>@ViewBag.Title | GitTime</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @RenderSection("HtmlHeader", false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
